--- a/Oppija/wp-content/themes/ophver3/less/_base.less
+++ b/Oppija/wp-content/themes/ophver3/less/_base.less
@@ -739,30 +739,21 @@ header, article, section, footer, p {
 }
 
 .sign {
-		clear: left;
 		margin: 5px 0;
 		display: inline-block;
-		max-width: 100%;
 		
 		.padding-left( @baseline / 2);
 		.margin-right(@baseline / 2);
-	
-		position: relative;
-		
+			
 		text-decoration: none;
 		color: @black;
 		.font-size(14px);
 
 		font-style: normal;
 		font-weight: normal;
-		background: none;
 		border: 1px solid #edcf7f;
-
 		background-color: #fee7a5;
-	
-		border-width: 1px;
-		border-style: solid;
-		
+			
 		-webkit-border-radius: 3px;
 		-moz-border-radius: 3px;
 		-o-border-radius: 3px;
@@ -773,8 +764,7 @@ header, article, section, footer, p {
 		-moz-box-shadow: inset 0px 1px 1px 0px rgba(255, 230, 162, 0.7);
 		-o-box-shadow: inset 0px 1px 1px 0px rgba(255, 230, 162, 0.7);
 		-ms-box-shadow: inset 0px 1px 1px 0px rgba(255, 230, 162, 0.7);
-		box-shadow: inset 0px 1px 1px 0px rgba(255, 230, 162, 0.7);
-			
+		box-shadow: inset 0px 1px 1px 0px rgba(255, 230, 162, 0.7);			
 }
 
 .sign-inner {
